--- a/style.css
+++ b/style.css
@@ -7,6 +7,17 @@ body{
     align-items: center;
     margin: 0;
     overflow: hidden;
+    position: relative;
+    .cover{
+        background-color: black;
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        opacity: 0;
+        pointer-events: none;
+    }
     
 }
 background-color:black;
@@ -18,3 +29,9 @@ canvas{
     margin: 0;
 
 }
+
+
+
+
+
+          
