--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ body{
         height: 100%;
         opacity: 0;
         pointer-events: none;
+        z-index: 10;
     }
 
     .healthbar-first{
